autenticacao: 2E.0
